@@ -144,8 +144,8 @@
                 <li>The CAT12 manual is now converted to HTML and merged with the online help to a single HTML file with interactive Matlab links that can be called in Matlab.</li>
                 <li>Added new thalamic nuclei <a class="function" href="matlab:cat_vol_display_label(struct('data',{{fullfile(fileparts(which('cat12')),'templates_MNI152NLin2009cAsym','Template_T1.nii'); fullfile(fileparts(which('cat12')),'templates_MNI152NLin2009cAsym','thalamic_nuclei.nii')}}))">atlas</a>.</li>
                 <li>Moved some rarely used CAT12 options to expert mode.</li>
-                <li>Added many new options to <a class="function" href="matlab:y=cat_surf_results;">visualize 3D (VBM) results</a> (e.g. new glass brain)</li>
-                <li>The tool to check <a class="function" href="matlab:spm_jobman('interactive','','spm.tools.cat.tools.check_homogeneity');">Sample Homogeneity</a>. has many new options and is now based on calculation of Z-score which is much faster for larger samples./li>
+                <li>Added many new options to <a class="function" href="matlab:y=cat_surf_results;">visualize 3D (VBM) results</a> (e.g. new glass brain).</li>
+                <li>The tool to check <a class="function" href="matlab:spm_jobman('interactive','','spm.tools.cat.tools.check_homogeneity');">Sample Homogeneity</a> has many new options and is now based on calculation of Z-score which is much faster for larger samples.</li>
                 <li>New <a class="function" href="matlab:spm_jobman('interactive','','spm.tools.cat.factorial_design');">Basic Models</a> to easier define cross-sectional and longitudinal statistical designs. Some unnecessary options have been removed compared to "Basic Models" in SPM12 and some useful options have been added.</li>
               </ul>
             </details>            
